--- a/ansible/roles/citrix-cloud-configuration/tasks/hosting_connection.yml
+++ b/ansible/roles/citrix-cloud-configuration/tasks/hosting_connection.yml
@@ -1,4 +1,5 @@
-- name: Built the environment dictonary and variables
+---
+- name: Built the environment dictionary and variables
   set_fact:
     branch: "{{ lookup('env', 'branch') | lower }}"
     prefix: "{{ lookup('env', 'prefix') }}"
@@ -7,12 +8,12 @@
     citrix_client_secret: "{{ lookup('env', 'citrix_client_secret') }}"
     azure_region: "{{ lookup('env', 'azure_region') }}"
     branches:
-        default: "pois" 
-        cards:   "card"
-        flowers: "flow"
+      default: "pois"
+      cards: "card"
+      flowers: "flow"
     regions:
-        westeurope: "West Europe"
-        eastus: "East US"
+      westeurope: "West Europe"
+      eastus: "East US"
 
 - name: Set the environment short
   set_fact:
@@ -25,7 +26,7 @@
     method: POST
     body_format: form-urlencoded
     body: "grant_type=client_credentials&client_id={{ citrix_client_id }}&client_secret={{ citrix_client_secret }}"
-    return_content: yes
+    return_content: true
   register: citrix_token
 
 - name: Get Citrix Cloud sites
@@ -33,10 +34,10 @@
     url: https://api.cloud.com/cvad/manage/me
     method: GET
     body_format: json
-    headers: 
+    headers:
       Citrix-CustomerId: "{{ citrix_org_id }}"
       Authorization: "CWSAuth bearer={{citrix_token.json.access_token}}"
-    return_content: yes
+    return_content: true
   register: citrix_sites
 
 # This section requires some refactoring
@@ -45,11 +46,11 @@
     citrix_site: "{{ data | json_query(querystr) }}"
   vars:
     data: "{{ citrix_sites.content }}"
-    querystr: "Customers[?contains(Id,'{{ citrix_org_id | lower }}')].Sites | [0]" #First result
+    querystr: "Customers[?contains(Id,'{{ citrix_org_id | lower }}')].Sites | [0]"  # First result
 
 - name: Set Citrix Cloud site id
   set_fact:
-    citrix_site_id: "{{ citrix_site[0].Id }}" # Harcoded to the first element for now
+    citrix_site_id: "{{ citrix_site[0].Id }}"  # Harcoded to the first element for now
 
 - name: Get Citrix Cloud hypervisor connection
   uri:
@@ -61,7 +62,7 @@
       Citrix-InstanceId: "{{ citrix_site_id }}"
       User-Agent: GET
       Authorization: "CWSAuth bearer={{citrix_token.json.access_token}}"
-    return_content: yes
+    return_content: true
   register: citrix_hypervisor
 
 - name: Set Citrix Cloud hypervisor ID
@@ -69,19 +70,19 @@
     citrix_hypervisor_id: "{{ data | json_query(querystr) }}"
   vars:
     data: "{{ citrix_hypervisor.json }}"
-    querystr: "Items[?contains(Name,'{{ prefix | lower }}-{{ environment_short }}-{{ deploymentname | lower }}-azure')].Id | [0]" #First result
+    querystr: "Items[?contains(Name,'{{ prefix | lower }}-{{ environment_short }}-{{ deploymentname | lower }}-azure')].Id | [0]"  # First result
 
 - name: Get Citrix Cloud zones
   uri:
     url: "https://api.cloud.com/cvad/manage/zones"
     method: GET
     body_format: json
-    headers: 
+    headers:
       Citrix-CustomerId: "{{ citrix_org_id }}"
       Citrix-InstanceId: "{{ citrix_site_id }}"
       User-Agent: GET
       Authorization: "CWSAuth bearer={{citrix_token.json.access_token}}"
-    return_content: yes
+    return_content: true
   register: citrix_zones
   when: citrix_hypervisor_id == ""
 
@@ -93,8 +94,8 @@
     querystr: "Items[?contains(Name,'{{ prefix | lower }}-{{ environment_short }}-{{ deploymentname | lower }}-azure')].Id | [0]"
   when: citrix_hypervisor_id == ""
 
-- name: Creating Citrix Cloud hosting body 
-  set_fact: 
+- name: Creating Citrix Cloud hosting body
+  set_fact:
     hosting_object:
       ConnectionDetails:
         Name: "{{ prefix | lower }}-{{ environment_short | lower }}-{{ deploymentname }}-azure"
@@ -112,14 +113,14 @@
     url: https://api.cloud.com/cvad/manage/hypervisors
     method: POST
     body_format: json
-    headers: 
+    headers:
       Citrix-CustomerId: "{{ citrix_org_id }}"
-      Citrix-InstanceId: "{{ citrix_site_id }}" 
+      Citrix-InstanceId: "{{ citrix_site_id }}"
       User-Agent: POST
       Authorization: "CWSAuth bearer={{citrix_token.json.access_token}}"
     body: "{{ hosting_object | to_json }}"
     status_code: [200, 201]
-    return_content: yes
+    return_content: true
   register: citrix_new_hypervisor
   when: citrix_hypervisor_id == ""
 
@@ -134,12 +135,12 @@
     url: "https://api.cloud.com/cvad/manage/hypervisors/{{ citrix_hypervisor_id }}/resourcePools"
     method: GET
     body_format: json
-    headers: 
+    headers:
       Citrix-CustomerId: "{{ citrix_org_id }}"
-      Citrix-InstanceId: "{{ citrix_site_id }}" 
+      Citrix-InstanceId: "{{ citrix_site_id }}"
       User-Agent: GET
-      Authorization: "CWSAuth bearer={{citrix_token.json.access_token}}" 
-    return_content: yes
+      Authorization: "CWSAuth bearer={{citrix_token.json.access_token}}"
+    return_content: true
   register: citrix_hypervisor_resource
 
 - name: Set Citrix Cloud hypervisor resource ID
@@ -149,28 +150,28 @@
     data: "{{ citrix_hypervisor_resource.json }}"
     querystr: "items[?contains(name,'{{ prefix | lower }}-{{ environment_short }}-{{ deploymentname | lower }}-azure')].id | [0]"
 
-- name: Creating Citrix Cloud resource body 
-  set_fact: 
+- name: Creating Citrix Cloud resource body
+  set_fact:
     resource_object:
       Name: "{{ prefix | lower }}-{{ environment_short }}-{{ deploymentname }}-default"
       ConnectionType: AzureRM
       Region: "{{ region }}.region"
       VirtualNetwork: "{{ region }}.region/virtualprivatecloud.folder/rg-golab-{{ environment_short }}-vnet.resourcegroup/vnet-infra-{{ environment_short }}.virtualprivatecloud"
-      Subnets: [ "{{ region }}.region/virtualprivatecloud.folder/rg-golab-{{ environment_short }}-vnet.resourcegroup/vnet-infra-{{ environment_short }}.virtualprivatecloud/sn-infra-{{ environment_short }}.network" ]
+      Subnets: ["{{ region }}.region/virtualprivatecloud.folder/rg-golab-{{ environment_short }}-vnet.resourcegroup/vnet-infra-{{ environment_short }}.virtualprivatecloud/sn-infra-{{ environment_short }}.network"]
   when: citrix_hypervisor_resource_id == ""
 
 - name: Post Citrix Cloud resource pool
   uri:
     url: https://api.cloud.com/cvad/manage/hypervisors/{{ citrix_hypervisor_id }}/resourcePools
     method: POST
-    headers: 
+    headers:
       Citrix-CustomerId: "{{ citrix_org_id }}"
-      Citrix-InstanceId: "{{ citrix_site_id }}" 
+      Citrix-InstanceId: "{{ citrix_site_id }}"
       User-Agent: POST
-      Authorization: "CWSAuth bearer={{citrix_token.json.access_token}}" 
+      Authorization: "CWSAuth bearer={{citrix_token.json.access_token}}"
     body_format: json
     body: "{{ resource_object | to_json }}"
-    return_content: yes
+    return_content: true
     status_code: [200, 201]
   register: citrix_new_resource
   when: citrix_hypervisor_resource_id == ""
