--- a/ansible/roles/domain-controller/tasks/config.yml
+++ b/ansible/roles/domain-controller/tasks/config.yml
@@ -1,5 +1,4 @@
-
-
+---
 - name: Set fact
   set_fact:
     domain_path: "dc={{ dns_domain_name.split('.')[0] }},dc={{ dns_domain_name.split('.')[1] }}"
@@ -8,7 +7,7 @@
   win_psmodule:
     name: ActiveDirectoryDsc
     state: present
-  retries: 5 
+  retries: 5
 
 - name: Create OU
   win_dsc:
@@ -76,7 +75,7 @@
     state: present
     path: "OU=ServiceAccounts,OU=GO,{{ domain_path }}"
     groups:
-    - Domain Admins
+      - Domain Admins
 
 - name: Create Service accounts
   win_domain_user:
@@ -86,7 +85,7 @@
     path: "OU=ServiceAccounts,OU=GO,{{ domain_path }}"
     description: SQL Server - Service Account
     groups:
-    - LoadGen
+      - LoadGen
 
 - name: Create LoadGen accounts
   win_domain_user:
@@ -94,12 +93,12 @@
     upn: "{{ 'LoadGen%03d' | format(item | int)  | lower }}@{{ dns_domain_name | lower }}"
     company: LoadGen
     password: '{{ ansible_password }}'
-    password_expired: no
-    user_cannot_change_password: yes
+    password_expired: false
+    user_cannot_change_password: true
     state: present
     path: "OU=LoadGen,OU=GO,{{ domain_path }}"
     description: LoadGen simulation account
     groups:
-    - LoadGen
+      - LoadGen
   when: "{{ item }} != 0"
   loop: "{{ range(51) | list }}"
