--- a/ansible/roles/remote-gateway/tasks/main.yml
+++ b/ansible/roles/remote-gateway/tasks/main.yml
@@ -8,19 +8,19 @@
   ansible.windows.win_feature:
     name: RDS-Gateway
     state: present
-    include_sub_features: yes
-    include_management_tools: yes
+    include_sub_features: true
+    include_management_tools: true
 
 - name: Create directory structure
   ansible.windows.win_file:
     path: C:\Certs
     state: directory
-    
+
 - name: Copy a single file
   ansible.windows.win_copy:
     src: '{{ certificate_file }}'
     dest: C:\Certs\cert.pfx
-    force: yes
+    force: true
 
 - name: Import pfx wildcard certificate
   ansible.windows.win_certificate_store:
@@ -38,7 +38,7 @@
     protocol: tcp
     profiles: [domain, private, public]
     state: present
-    enabled: yes
+    enabled: true
 
 - name: Debug
   ansible.builtin.debug:
@@ -56,12 +56,12 @@
       - '{{ domain_name }}\RD Gateway Users'
     session_timeout: 120
     session_timeout_action: disconnect
-    allow_only_sdrts_servers: yes
-    redirect_clipboard: yes
-    redirect_drives: no
-    redirect_printers: no
-    redirect_serial: no
-    redirect_pnp: no
+    allow_only_sdrts_servers: true
+    redirect_clipboard: true
+    redirect_drives: false
+    redirect_printers: false
+    redirect_serial: false
+    redirect_pnp: false
     state: enabled
 
 - name: Create a new RDS RAP
