Removed the pull trigger on the docker image

--- a/.devops/pipelines/docker.yml
+++ b/.devops/pipelines/docker.yml
@@ -2,7 +2,9 @@ name: '$(BuildDefinitionName)_$(Date:yyMM).$(DayOfYear)$(Rev:.r)'
 
 trigger:
 - none
-   
+
+pr: none
+
 pool:
   vmImage: 'ubuntu-latest'
 
