--- a/ansible/vars/domain.yml
+++ b/ansible/vars/domain.yml
@@ -2,4 +2,5 @@
 dns_domain_name: 'GO.EUC'
 domain_name: GO
 domain_controller: "{{ groups['dc'][0] }}"
-domain_admin_user: "GO\\{{ ansible_user }}"
+domain_admin_user: "{{domain_name}}\\Administrator"
+local_admin_user: gouser
