Combined both Citrix Cloud Connector installation and configuration in a single role

--- a/ansible/roles/citrix-cloud/tasks/main.yml
+++ b/ansible/roles/citrix-cloud/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Install the Cloud Connectors
+  include: install.yml
+
 - name: Configure the hosting connection
   include: hosting_connection.yml
 
